--- a/templates/error_page.html
+++ b/templates/error_page.html
@@ -1,2 +1,10 @@
-<h3>Oops</h3>
-<p>Please log in to use this feature!</p>
+{% extends 'base.html' %}
+{% block content %}
+<div class="bg-image">
+    <h3 class="center-align">
+        <strong><em>Sorry!</strong><br>Please log in or create an account to use this feature!</em>
+    </h3>
+    <p></p>
+</div>
+
+{% endblock %}
