--- a/templates/add_to.html
+++ b/templates/add_to.html
@@ -1,27 +1,21 @@
 {% extends 'base.html' %}
-{% include 'header.html' %}
+
 {% block content %}
+{% include 'header.html' %}
 <div class="container">
-    <h3>Holding for {{bag.asset}}</h3>
+    <h3 class="center-align">Holding for {{bag.asset}}</h3>
 </div>
 <div class="container">
     <div class="row">
         <form action="{{url_for('adding_to_bag', username = session['username'], bag_id=bag_id, bag=bag)}}"
-            method="POST" class="col s12">
+            method="POST" class="col s12 edit-form">
             <div class="row">
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">control_point</i>
-                        <select id="assets" name="asset" value="{{bag.asset}}" type="text" class="validate" disabled>
-                            <label>Edit a coin</label>
-                            {% for coin in data %}
-                            {% if bag.asset == coin.symbol %}
-                            <option value="{{bag.asset}}" selected>{{coin.symbol}}</option>
-                            {% else %}
-                            <option>{{coin.symbol}}</option>
-                            {% endif %}
-                            {% endfor %}
-                        </select>
+                        <input id="assets" name="asset" value="{{bag.asset}}" type="text" class="validate" disabled>
+                            <label>Add to {{bag.asset}}</label>
+                        </input>
                     </div>
                 </div>
                 <div class="row">
