--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
-{% include 'header.html' %}
+
 {% block content %}
+{% include 'header.html' %}
 <div class="container">
   <h3 class="center-align">Create a Crypto Holding</h3>
 </div>
 <div class="container">
   <div class="row">
-    <form action="{{url_for('add_to_bagz', username = session['username'])}}" method="POST" class="col s12">
+    <form action="{{url_for('add_to_bagz', username = session['username'])}}" method="POST" class="col s12 edit-form">
       <input id="_id" name="_id" type="hidden" value="{{_id}}" class="validate">
       <div class="row">
         <div class="row">
