--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="top-header center-align">
-    🚀 <b> Digi Market Cap is here! </b> 🚀 Start tracking your holdings wherever you go!
+    🚀 <b> Digi Market Cap is here! </b> 🚀 Start tracking your CRYPTO holdings wherever you go!
 </div>
 <header>
     <nav class="sidenav-trigger">
