--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,14 +2,18 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     justify-content: center;
     align-items: center;
 }
 
-body {
-    height: 100vh;
+label{
+    margin: -10px;
+}
+
+label.active{
+    margin: -15px;
 }
 
 #myCoinTable_wrapper {
@@ -37,12 +41,16 @@ body {
 
 }
 
+.switch {
+    float: right;
+}
+
 .edit-form {
     height: 90vh;
 }
 
 .bg-image{
-    height: 90vh;
+    height: 105vh;
     width: 100%;
     background-attachment: fixed;
     background-size: cover;
@@ -56,11 +64,6 @@ body {
     margin-top: 50px;
 }
 
-.login-form{
-    background-color: whitesmoke;
-    opacity: 0.9;
-    color: black;
-}
 
 nav{
     background-color: #6e75ee;
@@ -88,8 +91,11 @@ table.dataTable tbody tr {
     justify-content: space-around;
     display: flex;
 }
-
+.edit-form,
 .login-form{
+    background-color: whitesmoke;
+    opacity: 0.9;
+    color: black;
     margin: 20px;
     border: solid 1px;
     border-radius: 25px;
@@ -97,7 +103,7 @@ table.dataTable tbody tr {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    
 } 
 
 .coin_body{
@@ -119,15 +125,26 @@ table.dataTable.no-footer {
    background-color: red; 
 }
 
+.error_wrapper{
+    display: flex;
+    text-align: center;
+}
+
 /* Media queries */
 
 @media only screen and (max-width: 992px) {
     nav .brand-logo {
         font-size: 1.25em;
+        margin: 0;
     }
 
     #mybagTable {
         line-height: 2;
+    }
+    
+    #my_crypto_table_head {
+        line-height: 2.25;
+        padding: 10px;
     }
     
     .bag_table{
@@ -143,7 +160,7 @@ table.dataTable.no-footer {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 
