--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -2,52 +2,61 @@
 
 {% block content %}
 {% include 'header.html' %}
-<div class="container">
-  <h3 class="center-align">Create a Crypto Holding</h3>
-</div>
-<div class="container">
-  <div class="row">
-    <form action="{{url_for('add_to_bagz', username = session['username'])}}" method="POST" class="col s12 edit-form">
-      <input id="_id" name="_id" type="hidden" value="{{_id}}" class="validate">
-      <div class="row">
+<div class="bg-image">
+  <hr>
+  <div class="container">
+    <h4 class="center-align">Create a Crypto Holding</h4>
+  </div>
+  <hr>
+  <div class="container">
+    <div class="row">
+      <form action="{{url_for('add_to_bagz', username = session['username'])}}" method="POST" class="col s12 edit-form">
+        <input id="_id" name="_id" type="hidden" value="{{_id}}" class="validate" required>
         <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix">control_point</i>
-            <select id="assets" name="asset" type="text" class="validate">
-              <option value="" disabled selected>Choose your Crypto</option>
-              {% for coin in data %}
-              <option value="{{coin.symbol}}">{{coin.symbol}}</option>
-              {% endfor %}
-            </select>
-            <label>Add a coin</label>
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix">control_point</i>
+              <select id="assets" name="asset" type="text" class="validate">
+                <option value="" disabled selected>Choose your Crypto</option>
+                {% for coin in data %}
+                {% print(coin.symbol) %}
+                <option value="{{coin.symbol}}">{{coin.symbol}}</option>
+                {% endfor %}
+              </select>
+              <label>Add a coin</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix">info</i>
+              <input id="amount" name="amount" type="number" min="0" step="0.001" placeholder="" class="validate"
+                required>
+              <label>Amount of coins/units</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix">monetization_on</i>
+              <input id="price_paid" name="price_paid" type="number" min="0" step="0.0001" placeholder=""
+                class="validate" required>
+              <label>Price per coin/unit in USD</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix">date_range</i>
+              <input id="date_of_purchase" name="date_of_purchase" type="text" placeholder="" class="datepicker">
+              <label>Date of Purchase (optional)</label>
+            </div>
+          </div>
+          <div class="row">
+            <button class="btn-floating waves-effect waves-light" type="submit">
+              <i class="material-icons">send</i>
+            </button>
           </div>
         </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix">info</i>
-            <input id="amount" name="amount" type="number" min="0" step="0.001" placeholder="Amount of coins/units"
-              class="validate" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix">monetization_on</i>
-            <input id="price_paid" name="price_paid" type="number" min="0" step="0.0001"
-              placeholder="Price per coin/unit in USD" class="validate" required>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix">date_range</i>
-            <input id="date_of_purchase" name="date_of_purchase" type="text" placeholder="date of purchase"
-              class="datepicker">
-          </div>
-        </div>
-        <button class="btn-floating waves-effect waves-light" type="submit">
-          <i class="material-icons">send</i>
-        </button>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </div>
 {% endblock %}
