--- a/templates/edit_bag.html
+++ b/templates/edit_bag.html
@@ -2,57 +2,64 @@
 }
 {% block content %}
 {% include 'header.html' %}
-<div class="container">
-    <h3 class="center-align">Holding for {{bag.asset}}</h3>
-</div>
-<div class="container">
-    <div class="row">
-        <form action="{{url_for('update_bag', username = session['username'], bag_id=bag_id)}}" method="POST" class="col s12 edit-form">
-            <div class="row">
+<div class="bg-image">
+    <hr>
+    <div class="container">
+        <h4 class="center-align">Holding for {{bag.asset}}</h4>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="row">
+            <form action="{{url_for('update_bag', username = session['username'], bag_id=bag_id)}}" method="POST"
+                class="col s12 edit-form">
                 <div class="row">
-                    <div class="input-field col s12">
-                        
-                        <i class="material-icons prefix">control_point</i>
-                        <select id="assets" name="asset" value="{{bag.asset}}" type="text" class="validate" required>
-                            {% for coin in data %}
-                            {% if bag.asset == coin.symbol %}
-                            <option value="{{bag.asset}}"selected >{{coin.symbol}}</option>
-                            {% else %}
-                            <option>{{coin.symbol}}</option>
-                            {% endif %}
-                            {% endfor %}
-                        </select>
-                        <label>Asset</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">control_point</i>
+                            <select id="assets" name="asset" value="{{bag.asset}}" type="text" class="validate"
+                                required>
+                                {% for coin in data %}
+                                {% if bag.asset == coin.symbol %}
+                                <option value="{{bag.asset}}" selected>{{coin.symbol}}</option>
+                                {% else %}
+                                <option>{{coin.symbol}}</option>
+                                {% endif %}
+                                {% endfor %}
+                            </select>
+                            <label>Asset</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">info</i>
-                        <input id="amount" name="amount" type="number" step="0.001" value="{{bag.amount}}" class="validate">
-                        <label>Asset amount</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">info</i>
+                            <input id="amount" name="amount" type="number" step="0.001" value="{{bag.amount}}"
+                                class="validate">
+                            <label>Asset amount</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">monetization_on</i>
-                        <input id="price_paid" name="price_paid" type="number" min="0" step="0.001" value="{{bag.price_paid}}" class="validate">
-                        <label>Price per unit</label>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">monetization_on</i>
+                            <input id="price_paid" name="price_paid" type="number" min="0" step="0.001"
+                                value="{{bag.price_paid}}" class="validate">
+                            <label>Price per unit</label>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">date_range</i>
-                        <input id="date_of_purchase" name="date_of_purchase" type="text" value="{{bag.date_of_purchase}}"
-                            class="datepicker">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">date_range</i>
+                            <input id="date_of_purchase" name="date_of_purchase" type="text"
+                                value="{{bag.date_of_purchase}}" class="datepicker">
                             <label>Optional</label>
+                        </div>
                     </div>
+
+                    <button class="btn-floating waves-effect waves-light" type="submit">
+                        <i class="material-icons">send</i>
+                    </button>
                 </div>
-                <button class="btn-floating waves-effect waves-light" type="submit">
-                    <i class="material-icons">send</i>
-                </button>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
-
 {% endblock %}
