--- a/templates/header.html
+++ b/templates/header.html
@@ -15,10 +15,11 @@
         </div>
     </nav>
     <ul class="sidenav" id="mobile-menu">
-        <li><a href="{{url_for('coin_list', username = session['username'])}}">Coin List</a></li>
-        <li><a href="{{url_for('get_my_bagz', username = session['username'])}}">My Crypto</a></li>
-        <li><a href="{{url_for('create_a_bag', username = session['username'])}}">Add a Crypto</a></li>
-        <li><a href="{{url_for('logout', username = session['username'])}}">Logout</a></li>
+        <li><a href="{{url_for('coin_list', username = session['username'])}}"><i class="small material-icons right">assessment</i>Coin List</a></li>
+        <li><a href="{{url_for('get_my_bagz', username = session['username'])}}"><i class="small material-icons right">account_balance_wallet</i>My Crypto</a></li>
+        <li><a href="{{url_for('create_a_bag', username = session['username'])}}"><i class="small material-icons right">control_point_duplicate</i>Add a Crypto</a></li>
+        <li><a href="{{url_for('logout', username = session['username'])}}"><i class="small material-icons right">exit_to_app</i>Logout</a></li>
+        <li><a href="{{url_for('index')}}"><i class="small material-icons right">close</i>Close Menu</a></li>
     </ul>
 </header>
 
