--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -16,10 +16,10 @@
 <hr>
 <table class="responsive-table striped" id="myCoinTable">
   <thead>
-    <tr class="favorite">
+    <tr class="favourite">
       <th>
         <div>
-          <button id="is_favorite">Favorites</button>
+          <button id="is_favourite">Favourites</button>
         </div>
       </th>
       <th>Rank</th>
