--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,28 @@
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+
 .preloader-wrapper {
     height: 100%;
     width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+html {
+    font-size: 14px;
 }
 
 label{
@@ -38,6 +54,8 @@ label.active{
 }
 
 .header-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
 }
@@ -89,7 +107,10 @@ table.dataTable tbody tr {
 } 
 
 .global_stats{
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .edit-form,
@@ -100,10 +121,19 @@ table.dataTable tbody tr {
     margin: 20px;
     border: solid 1px;
     border-radius: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     
 } 
 
@@ -128,6 +158,8 @@ table.dataTable.no-footer {
 }
 
 .error_wrapper{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     text-align: center;
 }
@@ -162,14 +194,6 @@ table.dataTable.no-footer {
     }
 }
 
-@media only screen and (min-width: 0) {
-    html {
-        font-size: 11px;
-    }
-}
-
 .hidden {
     display: none !important;
 }
-
-
