Top header background colour change

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,7 +50,7 @@ label.active{
     margin: 10px 0px;
 }
 .top-header {
-    background-color: red;
+    background-color: yellow;
 }
 
 .header-icons {
