style change to footer to align better

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 <div class="container loginPage">
                     <div class="row">
                         <form method="POST" action="{{url_for('login')}}" class="login-form col s12">
-                            <h4>Please login.</h4>
+                            <h4>Please Sign In</h4>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input placeholder="Username" name="username" id="first_name" type="text"
