--- a/static/css/style.css
+++ b/static/css/style.css
@@ -145,16 +145,19 @@ table.dataTable.no-footer {
     border-bottom-style: none;
 }
 
+.disclaimer {
+    display: flex;
+}
+
 .page-footer {
     padding: 0;
 }
 
 
 .page-footer .footer-copyright{
-   padding: 0;
+   padding: 5px;
    color: white;
    background-color: red; 
-   font-size: 10px;
 }
 
 .error_wrapper{
