added navbar-fixed class

--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -19,7 +19,7 @@
     <tr class="favourite">
       <th>
         <div>
-          <button id="is_favourite">Favourites</button>
+          <a href="#" id="is_favourite">Favourites</a>
         </div>
       </th>
       <th>Rank</th>
