--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -11,13 +11,13 @@
   <div class="container">
     <div class="row">
       <form action="{{url_for('add_to_bagz', username = session['username'])}}" method="POST" class="col s12 edit-form">
-        <input id="_id" name="_id" type="hidden" value="{{_id}}" class="validate" required>
+        <input id="_id" name="_id" type="hidden" value="{{_id}}" class="validate">
         <div class="row">
           <div class="row">
             <div class="input-field col s12">
               <i class="material-icons prefix">control_point</i>
-              <select id="assets" name="asset" type="text" class="validate">
-                <option value="" disabled selected>Choose your Crypto</option>
+              <select id="assets" name="asset" type="text" class="validate" required>
+                <option value="" disabled selected>Crypto *Required</option>
                 {% for coin in data %}
                 {% print(coin.symbol) %}
                 <option value="{{coin.symbol}}">{{coin.symbol}}</option>
