updated pip and requirements.txt, heroku issue

--- a/templates/register.html
+++ b/templates/register.html
@@ -28,7 +28,7 @@
                                 <div class="input-field col s12">
                                     <input placeholder="Username" name="username" id="first_name" type="text"
                                         class="validate" maxlength="20" required>
-                                    <label for="first_name">Username</label>
+                                    <label for="first_name">Username must be available</label>
                                 </div>
                             </div>
                             <div class="row">
