attempt to wireup favourites to database. Ran out of time

--- a/templates/my_crypto.html
+++ b/templates/my_crypto.html
@@ -18,7 +18,7 @@
                     <th>AVG Buy per unit</th>
                     <th>Price Diff</th>
                     <th>Amount invested</th>
-                    <th>Purcahse Date</th>
+                    <th>Purchase Date</th>
                     <th>Edit</th>
                     <th>Add</th>
                     <th>Delete</th>
